<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="richslide.com.giparangmirror.HistoryActivity">
    <!-- 화면: 히스토리 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">
        <!-- 상단 로고 + 시계 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="horizontal"
            android:background="@color/black">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <TextView
                    android:id="@+id/txtDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:text="2017.10.19 목요일"/>
                <TextView
                    android:id="@+id/txtTimes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="10dp"
                    android:paddingLeft="7dp"
                    android:text="PM 02:25"/>
            </LinearLayout>
        </LinearLayout><!-- 상단 로고 + 시계 -->

        <!-- 메뉴바 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="horizontal">
            <Button
                android:onClick="goMainHandler"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="35dp"
                android:text="@string/app_menu_main"
                android:textSize="13dp"
                android:textColor="@color/blue"
                android:background="@drawable/btn_main"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="35dp"
                android:text="@string/app_menu_history"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:background="@drawable/btn_history_sel"/>
        </LinearLayout><!-- 메뉴바 -->

        <!-- 레이더 차트 + 다른월 + 종합점수 + 다른일 리스트 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="5dp">

            <!-- 레이더 차트 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="100"
                android:layout_height="match_parent"
                android:background="@color/blank"
                android:gravity="center_horizontal|center_vertical">

                <!-- 레이더 차트 영역입니다 android:layout_width="match_parent" android:layout_height="match_parent"-->
                <!-- 레이더차트 방사선(*요모양) 실선색상 #373737, 점선은 기본 색상 그대로 사용, 두께도 그대로 사용 -->
                <!-- 오늘자 레이더 차트 그래프 선색상 #00bbd4, 지표 찍는 점은 동그라미로 사용(#00bbd4), 면적 채우는 색상은 #00bbd4(선과같음)과 투명도 30%(100%가 완전 불투명-0%는 투명) -->
                <!-- 과거 레이더 차트 그래프 선색상 #e91d62, 지표 찍는 점은 동그라미로 사용(#e91d62), 면적 채우는 색상은 #e91d62(선과같음)과 투명도 30%(100%가 완전 불투명-0%는 투명) -->
                <!-- 레이더 차트 라벨 색상 #a0a0a0 사이즈 12dp -->
                <!-- 딱 요기입니당! -->

                <com.github.mikephil.charting.charts.RadarChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout><!-- 레이더 차트 -->



            <!-- 다른월 + 종합점수 + 다른일 리스트 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="100"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/spinnerYearMonth"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:padding="0dp"
                    android:background="@color/gray333"
                    android:textSize="10dp"
                    android:textColor="@color/black"></Spinner>

                <!-- 종합점수 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|center_horizontal">
                    <!-- 오늘 -->
                    <LinearLayout
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/img_circle"
                        android:layout_marginRight="10dp">
                        <TextView
                            android:id="@+id/txtTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="172"
                            android:textSize="30dp"
                            android:textColor="@color/skyblue"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_score_totaltoday"
                            android:textAlignment="center"
                            android:textSize="10dp"
                            android:textColor="@color/white"/>
                    </LinearLayout><!-- 오늘 -->
                    <!-- 과거 -->
                    <LinearLayout
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/img_circle"
                        android:layout_marginLeft="10dp">
                        <TextView
                            android:id="@+id/txtSelectedTotal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="100"
                            android:textSize="30dp"
                            android:textColor="@color/pink"/>
                        <TextView
                            android:id="@+id/txtSelectedTotalText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="15일 종합점수"
                            android:textAlignment="center"
                            android:textSize="10dp"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout><!-- 종합점수 -->

                <!-- 다른 날 선택 -->
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">
                    <!--
                    android:layout_width="wrap_content"
                    android:layout_height="102dp"
                    -->
                    <LinearLayout
                        android:id="@+id/layoutBarchart"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <!-- item -->
                        <!--<FrameLayout
                            android:layout_width="53dp"
                            android:layout_height="match_parent">-->
                        <!-- 그라데이션 차트영역 -->
                        <!--  <LinearLayout
                              android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:layout_gravity="center_horizontal"
                              android:paddingBottom="26dp"
                              android:orientation="vertical">-->
                        <!-- 차트가
                        100%면 ImageView android:layout_weight="0" | ImageView 바로 아래 LinearLayout android:layout_weight="100"
                        70%면 ImageView android:layout_weight="30" | ImageView 바로 아래 LinearLayout android:layout_weight="70"
                        50%면 ImageView android:layout_weight="50" | ImageView 바로 아래 LinearLayout android:layout_weight="50"
                        30%면 ImageView android:layout_weight="70" | ImageView 바로 아래 LinearLayout android:layout_weight="30"
                        0%면 ImageView android:layout_weight="100" | ImageView 바로 아래 LinearLayout android:layout_weight="0"
                        방식으로 해주시면 되욥
                        -->
                        <!-- <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:layout_weight="15"
                             android:src="@drawable/img_black"/>
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:layout_weight="85"
                             android:orientation="vertical">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:src="@drawable/img_chart_bar_top"/>
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="0dp"
                                 android:layout_weight="100"
                                 android:scaleType="fitXY"
                                 android:adjustViewBounds="false"
                                 android:src="@drawable/img_chart_bar"/>
                         </LinearLayout>
                     </LinearLayout>--><!-- 그라데이션 차트영역 -->
                        <!--
                        비선택 버튼 android:textColor="@color/gray333" android:background="@color/blank"
                        선택된 버튼 android:textColor="@color/black" android:background="@color/blue"
                        -->
                        <!-- <Button
                             android:layout_width="match_parent"
                             android:layout_height="26dp"
                             android:layout_gravity="bottom|center_horizontal"
                             android:layout_marginBottom="2dp"
                             android:text="18"
                             android:textSize="10dp"
                             android:textColor="@color/black"
                             android:background="@color/blue"/>
                     </FrameLayout>--><!-- item -->

                    </LinearLayout>

                </HorizontalScrollView><!-- 다른 날 선택 -->

            </LinearLayout><!-- 다른월 + 종합점수 + 다른일 리스트 -->




        </LinearLayout>
        <!-- 레이더 차트 + 다른월 + 종합점수 + 다른일 리스트 -->



    </LinearLayout><!-- 화면: 히스토리 -->

</android.support.constraint.ConstraintLayout>
